--- a/library-front-master/batch/src/main/resources/batch.properties
+++ b/library-front-master/batch/src/main/resources/batch.properties
@@ -4,10 +4,9 @@ batch.message=batch opérationnel...
 # Lancement toutes les 20 secondes pour test
 batch.cron=*/20 * * * * * 
 
-#Lancement toutes les dimanche à 18h
 #batch.cron=0 0 18 * * SUN
 
 
 # config email
-batch.mail=libraryopenclassrooms@gmail.com
-batch.password=xxxxxxxxxx
+batch.mail=jnditifei@gmail.com
+batch.password=Bangui2001rc@
