--- a/library-back-master/webservice/src/main/resources/application.properties
+++ b/library-back-master/webservice/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.platform=postgresql
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.messages.basename=validation
 
